--- a/styles/components/text-badge.scss
+++ b/styles/components/text-badge.scss
@@ -11,7 +11,7 @@
   color: var(--colour-neutral-000);
   min-width: fit-content;
   border-radius: 0.75rem;
-  overflow: hidden;
+  // overflow: hidden;
 
   // background: var(--colour-neutral-1100) 100%;
   // color: var(--colour-sosy-green-500);
